# libsvm-buildsystem

./: CMakeLists.txt  README
apps/: CMakeLists.txt  svm-predict.c  svm-train.c
lib/: CMakeLists.txt
source/: svm.cpp
svm-toy/: CMakeLists.txt
svm-toy/gtk/: CMakeLists.txt  callbacks.cpp
svm-toy/qt/: CMakeLists.txt  svm-toy.cpp  svm-toy.h
svm-toy/windows/: CMakeLists.txt  svm-toy.cpp
